--- a/mahjong/templates/mahjong/base.html
+++ b/mahjong/templates/mahjong/base.html
@@ -2,7 +2,8 @@
 
 <html>
     <head>
-        <title>Mahjong Record</title>
+   
+        <title>麻雀レコード</title>
         
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
@@ -12,6 +13,7 @@
     <body>
 
         <div class="page-header">
+            <h1>time</h1>
             <h1><a href="/">Django Apps</a></h1>
         </div>
         <div class="content container">
