--- a/mahjong/templates/mahjong/index.html
+++ b/mahjong/templates/mahjong/index.html
@@ -1,7 +1,9 @@
 {% extends 'mahjong/base.html' %}
 
+
 {% block content %}
     <h1> Hello! </h1>
-        <p> test </p>
+        <p> {{ time }} </p>
     <h1> 拡張テスト </h1>
+    <a href="/templates/mahjong/record_form">レコード一覧</a>
 {% endblock %}
